# KD

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
examples/: 01_quickstart.py  02_your_data.py  03_visualize.py  04_noisy_data.py  05_save_load.py  06_realworld.py  README.md
examples/internals/: 00_components_intro.py  02_sga_discovery_burgers.py  03_sga_2d_diffusion.py  04_2d_diffusion.py  04_sga_with_autograd.py  05_save_load_result.py  README.md
src/kd2/: __init__.py  api.py  inspect.py
src/kd2/core/: __init__.py  evaluator.py  integrator.py  metrics.py  safety.py
src/kd2/core/compat/: __init__.py  prefix.py
src/kd2/core/executor/: __init__.py  context.py
src/kd2/core/expr/: __init__.py  canonicalizer.py  executor.py  naming.py  registry.py  simplify.py  sympy_bridge.py  terms.py  validator.py
src/kd2/core/linear_solve/: __init__.py  base.py  least_squares.py  stridge.py
src/kd2/data/: __init__.py  _factory.py  schema.py
src/kd2/data/derivatives/: __init__.py  autograd.py  base.py  finite_diff.py
src/kd2/models/: __init__.py  field_model.py  trainer.py
src/kd2/search/: __init__.py  callbacks.py  protocol.py  recorder.py  result.py  runner.py
src/kd2/viz/: __init__.py  engine.py  extension.py  report.py  style.py
tests/: conftest.py
tests/examples/: test_examples_smoke.py
tests/fixtures/: __init__.py  test_nn.py
tests/integration/: __init__.py  test_autograd_evaluator.py  test_checkpoint_compat.py  test_fieldmodel_autograd.py  test_integrator.py  test_lap_executor.py  test_python_executor_integration.py  test_review_findings.py  test_sga_autograd_modes.py  test_sga_burgers.py  test_sga_phase_a_regression.py  test_viz_pipeline.py
tests/unit/: conftest.py  test_api.py  test_inspect.py  test_repo_layout.py
tests/unit/core/: test_evaluator.py  test_integrator.py  test_metrics.py  test_safety.py  test_safety_properties.py
tests/unit/data/: test_from_arrays.py  test_schema.py  test_synthetic.py  test_synthetic_generators.py
tests/unit/models/: test_field_model.py  test_trainer.py
tests/unit/search/: _runner_mocks.py  test_callbacks.py  test_protocol.py  test_recorder.py  test_result.py  test_runner.py  test_runner_checkpoint.py  test_runner_review_findings.py
tests/unit/viz/: conftest.py  test_coefficient.py  test_comparison.py  test_engine.py  test_error_heatmap.py  test_extension.py  test_field.py  test_pde_residual.py  test_plots.py  test_report.py  test_residual_upgrade.py  test_style.py  test_time_slices.py
(+56 files in other folders)
